fixed flexbox positioning in header & description

--- a/index.html
+++ b/index.html
@@ -8,21 +8,25 @@
 
     <body>
         <div class="header">
-            <div class="header-title"><h1>Persistence</h1></div>
-            <div class="hero-main"><h2>This is a motivational Page</h2></div>
-            <div class="hero-secondary"><p>Whenever you are feeling unmotivated, or frustrated with development, visit this page.</p></div>
-            <div class="list-1">
-                <li><a>About</a></li>
-                <li><a>Terms</a></li>
-                <li><a>FAQ</a></li></div>
-                <img class="wheel-gif" src="./wheel.gif" alt="thinking">
+            <div class="header-title"><h1>Persistence</h1>
+                <div class="links">
+                    <a>About</a>
+                    <a>Terms</a>
+                    <a>FAQ</a>
+                </div>
             </div>
+        </div>
+    <div class="header-desc">
+        <div class="hero-main"><h2>This is a motivational page</h2></div>
+           <div class="hero-sec"><p>Whenever you are feeling unmotivated, or frustrated with development, visit this page.</p></div>
+            <div class="wheel-gif"><img  src="./wheel.gif" alt="thinking"></div>
+    </div>    
         <div class="info">
             <div class="title"><strong> The problem solving process!</strong></div>
 <div class="fish">
     <div class="info">
         <img src="./curious.jpeg" alt="curious">
-        <div class="text">This is beginning, you are ready to start.</div>
+        <div class="text">This is the beginning, you are ready to start.</div>
     </div>
     <div class="info">
         <img src="./confused.jpeg" alt="confused">
@@ -36,7 +40,7 @@
 
     <div class="info">
         <img src="./success.jpeg" alt="success">
-        <div class="text">After what feels like an eternity you have figured out the issue, success. The process starts again.</div>
+        <div class="text">After what feels like an eternity you have figured out the issue, success! The process starts again.</div>
     </div>
 </div>
         </div>
