--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
                     <a>About</a>
                     <a>Terms</a>
                     <a>FAQ</a>
+                    <a>Sign Up</a>
                 </div>
             </div>
         </div>
