Adjusted content in info section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
     <div class="info">
         <img src="./confused.jpeg" alt="confused">
-        <div class="text">You reached a problem and you have no idea how to solve it.</div>
+        <div class="text">You have encountered a problem and you have no idea how to solve it.</div>
     </div>
 
     <div class="info">
@@ -41,7 +41,7 @@
 
     <div class="info">
         <img src="./success.jpeg" alt="success">
-        <div class="text">After what feels like an eternity you have figured out the issue, success! The process starts again.</div>
+        <div class="text">After what feels like an eternity, you have figured out the issue, success! The process starts again.</div>
     </div>
 </div>
         </div>
@@ -49,7 +49,7 @@
             <p><em>“Just keep swimming. 
                 Just keep swimming, swimming, swimming. 
                 What do we do? We swim, swim.”</em>
-            - Dorry, Finding Nemo </p>
+            - Dory, Finding Nemo </p>
         </div>
         <div class="Sign-up">
             <button>Sign Up</button>
